--- a/src/arquivoTeste.fxml
+++ b/src/arquivoTeste.fxml
@@ -32,32 +32,32 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControladorNomePersonagem">
+<VBox prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControladorNomePersonagem">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="494.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
       <children>
-            <Label layoutX="223.0" layoutY="96.0" prefHeight="17.0" prefWidth="195.0" text="Livro Interativo!">
+            <TextArea fx:id="textoCapitulo" editable="false" layoutX="34.0" layoutY="84.0" prefHeight="238.0" prefWidth="733.0" text="..." wrapText="true">
+               <font>
+                  <Font name="Candara Light" size="20.0" />
+               </font>
+            </TextArea>
+            <Label layoutX="34.0" layoutY="32.0" prefHeight="36.0" prefWidth="245.0" text="A história da floresta">
                <font>
                   <Font size="25.0" />
                </font></Label>
-            <TextField fx:id="textFieldNomePersonagem" layoutX="230.0" layoutY="227.0" />
-            <Button fx:id="botaoIniciar" layoutX="261.0" layoutY="283.0" mnemonicParsing="false" onAction="#salvarNomePersonagem" text="Iniciar">
+            <TextArea fx:id="imagemAscii" editable="false" layoutX="34.0" layoutY="349.0" prefHeight="238.0" prefWidth="733.0" text="ASCII!" visible="false" wrapText="true">
                <font>
-                  <Font size="22.0" />
+                  <Font name="Consolas" size="12.0" />
                </font>
-            </Button>
-            <Label fx:id="labelNomePersonagem" layoutX="223.0" layoutY="187.0" prefHeight="26.0" prefWidth="172.0" text="Nome do Personagem" textAlignment="RIGHT">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Label>
+            </TextArea>
+            <ButtonBar fx:id="botoesEscolha" layoutX="34.0" layoutY="613.0" prefHeight="173.0" prefWidth="733.0" />
       </children>
     </AnchorPane>
   </children>
