--- a/src/arquivoTeste.fxml
+++ b/src/arquivoTeste.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -39,7 +40,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControladorNomePersonagem">
+<VBox prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="494.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
       <children>
@@ -50,7 +51,7 @@
             </TextArea>
             <Label layoutX="34.0" layoutY="32.0" prefHeight="36.0" prefWidth="245.0" text="A história da floresta">
                <font>
-                  <Font size="25.0" />
+                  <Font name="Candara" size="25.0" />
                </font></Label>
             <TextArea fx:id="imagemAscii" editable="false" layoutX="34.0" layoutY="349.0" prefHeight="238.0" prefWidth="733.0" text="ASCII!" visible="false" wrapText="true">
                <font>
@@ -58,6 +59,11 @@
                </font>
             </TextArea>
             <ButtonBar fx:id="botoesEscolha" layoutX="34.0" layoutY="613.0" prefHeight="173.0" prefWidth="733.0" />
+            <Button fx:id="botaoIniciar" layoutX="697.0" layoutY="37.0" mnemonicParsing="false" onAction="#iniciarHistoria" text="Carregar">
+               <font>
+                  <Font name="Candara" size="14.0" />
+               </font>
+            </Button>
       </children>
     </AnchorPane>
   </children>
